# simple-music-bot

./: Cargo.toml  Dockerfile
src/: main.rs
